--- a/PRoductos.html
+++ b/PRoductos.html
@@ -18,7 +18,7 @@
         <div class="card-body">
           <h5 class="card-title">Tortas de un piso</h5>
           <p class="card-text">Las tortas de un piso se elaboran desde 10 hasta 30 personas.Decoración en Buttercream</p>
-          <a href="./carro de compras.html" class="btn btn-primary">Comprar</a>
+          <a href="./carro_de_compras.html" class="btn btn-primary">Comprar</a>
         </div>
       </div>
       <!-- tarjeta 2 -->
@@ -27,7 +27,7 @@
         <div class="card-body">
           <h5 class="card-title">Tortas de un piso</h5>
           <p class="card-text">Las tortas de un piso se elaboran desde 10 hasta 30 personas.Decoración en fondant</p>
-          <a href="./carro de compras.html" class="btn btn-primary">Comprar</a>
+          <a href="./carro_de_compras.html" class="btn btn-primary">Comprar</a>
         </div>
       </div>
     </div>
