--- a/otros_productos.html
+++ b/otros_productos.html
@@ -19,7 +19,7 @@
     <div class="card-body">
       <h5 class="card-title">Tortas de varios pisos</h5>
       <p class="card-text">Las tortas de cuatro pisos se elaboran desde 70 hasta 150 personas.Decoración en fondant</p>
-      <a href="./carro de compras.html" class="btn btn-primary">Comprar</a>
+      <a href="./carro_de_compras.html" class="btn btn-primary">Comprar</a>
     </div>
   </div>
 <!-- tarjeta 2 -->
@@ -28,7 +28,7 @@
 <div class="card-body">
   <h5 class="card-title">Tortas de varios pisos</h5>
   <p class="card-text">Las tortas de dos pisos se elaboran desde 25 hasta 50 personas.Decoración en fondant</p>
-  <a href="./carro de compras.html" class="btn btn-primary">Comprar</a>
+  <a href="./carro_de_compras.html" class="btn btn-primary">Comprar</a>
 </div>
 </div>
 <!-- tarjeta 3 -->
@@ -37,7 +37,7 @@
 <div class="card-body">
   <h5 class="card-title">Tortas de varios pisos</h5>
   <p class="card-text">Las tortas de tres pisos se elaboran desde 50 hasta 80 personas.Decoración en fondant</p>
-  <a href="./carro de compras.html" class="btn btn-primary">Comprar</a>
+  <a href="./carro_de_compras.html" class="btn btn-primary">Comprar</a>
 </div>
 </div>
 <!-- tarjeta 4 -->
