guardando ultimos cambios

--- a/PRoductos.html
+++ b/PRoductos.html
@@ -9,24 +9,24 @@
 </head>
 <body>
   <!-- productos -->
-  <h1 class="Display mb-5">Tortas de un piso</h1>
+  <h1 class="Display mb-3">Tortas de un piso</h1>
   <section id="productos">
-  <div class="row">
+  <div class="row gx-5">
     <!-- tarjeta 1 -->
-    <div class="card" style="width: 18rem;" class="col">
+    <div class="card m-auto" style="width: 18rem;" class="col col-lg-6">
         <img src="./assets/img/IMG-20221209-WA0062.jpg" class="card-img-top" alt="foto1">
         <div class="card-body">
           <h5 class="card-title">Tortas de un piso</h5>
-          <p class="card-text">Las tortas de un piso se elaboran desde 10 hasta 30 personas.Decoración en Buttercream</p>
+          <p class="card-text">Las tortas de un piso se elaboran desde 10 hasta 30 personas. Decoración en Buttercream</p>
           <a href="./carro_de_compras.html" class="btn btn-primary">Comprar</a>
         </div>
       </div>
       <!-- tarjeta 2 -->
-      <div class="card" style="width: 18rem;" class="col mb-5">
+      <div class="card m-auto" style="width: 18rem;" class="col col-lg-6">
         <img src="./assets/img/IMG-20221126-WA0000.jpg" class="card-img-top" alt="foto2">
         <div class="card-body">
           <h5 class="card-title">Tortas de un piso</h5>
-          <p class="card-text">Las tortas de un piso se elaboran desde 10 hasta 30 personas.Decoración en fondant</p>
+          <p class="card-text">Las tortas de un piso se elaboran desde 10 hasta 30 personas. Decoración en fondant</p>
           <a href="./carro_de_compras.html" class="btn btn-primary">Comprar</a>
         </div>
       </div>
