--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
   <!-- barra de navegacion -->
-    <nav class="navbar navbar-expand-lg bg-light px-5">
+    <nav class="navbar navbar-expand-lg bg-primary px-5">
         <div class="container-fluid">
           <a class="navbar-brand" href="./assets/img/logo.transparente.png">
             <img src="./assets/img/logo.transparente.png" alt="foto9" width="60px">
@@ -44,7 +44,7 @@
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="Carro compras" placeholder="Carro de Compras" aria-label="Carro de compras">
               <a href="./carro_de_compras.html"></a>
-              <button class="btn btn-outline-primary" type="submit">ver</button>
+              <button class="btn btn-outline-warning" type="submit">ver</button>
               <i class="fa-solid fa-cart-shopping"></i>
               
             </form>
@@ -65,14 +65,14 @@
     </div>
     
     <!-- The slideshow/carousel -->
-    <div class="carousel-inner">
-      <div class="carousel-item active pt-5">
+    <div class="carousel-inner mx-5">
+      <div class="carousel-item active pt-5 ms-5">
         <img src="./assets/img/logo.transparente.png" alt="Foto8" class="d-block" style="width:30%">
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item ms-5 mt-5">
         <img src="./assets/img/Screenshot_20180801-104833.png" alt="Foto9" class="d-block" style="width:20%">
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item ms-5 mt-5">
         <img src="./assets/img/20180806_222853 - copia.png" alt="Foto7" class="d-block" style="width:20%">
       </div>
     </div>
@@ -85,7 +85,7 @@
       <span class="carousel-control-next-icon"></span>
     </button>
   </div>
-  <div class="container-fluid mt-3">
+  <div class="container-fluid mt-5">
 
   </div>
 
@@ -94,10 +94,10 @@
 <script src="./portafolio-2/assets/js/script.js"></script>
 </body>
 
-<footer>
-  
+<footer class="container bg-light mt-5 text-center">
+  <hr>
      <p>Blanco y Valdez Reposteria Artistica, ubicada en la Comuna de Maipu Region Metroplitana Santiago de Chile</p>
-    <p>Sigue nuetras redes sociales @blancoyvaldez</p>
+    <p>Sigue nuetras redes sociales @blancoyvaldez Telefono +56 953190719</p>
     <p> Elaborado por Yanitza Valdez</p>
 </footer>
 </html>
