--- a/otros_productos.html
+++ b/otros_productos.html
@@ -12,9 +12,9 @@
   <!-- productos -->
 
 <section id="productos">
-  <div class="row">
+  <div class="row gx-5">
     <!-- tarjeta 1 -->
-<div class="card" style="width: 18rem;" class="col mx-2">
+<div class="card m-auto" style="width: 18rem;" class="col mx-2">
     <img src="./assets/img/IMG-20221209-WA0148.jpg" class="card-img-top" alt="foto3">
     <div class="card-body">
       <h5 class="card-title">Tortas de varios pisos</h5>
@@ -23,7 +23,7 @@
     </div>
   </div>
 <!-- tarjeta 2 -->
-<div class="card" style="width: 18rem;" class="col mx-2">
+<div class="card m-auto" style="width: 18rem;" class="col mx-2">
 <img src="./assets/img/IMG-20221210-WA0031.jpg" class="card-img-top" alt="foto4">
 <div class="card-body">
   <h5 class="card-title">Tortas de varios pisos</h5>
@@ -32,7 +32,7 @@
 </div>
 </div>
 <!-- tarjeta 3 -->
-<div class="card" style="width: 18rem;" class="col mx-2">
+<div class="card m-auto" style="width: 18rem;" class="col mx-2">
 <img src="./assets/img/IMG-20221204-WA0000.jpg" class="card-img-top" alt="foto5">
 <div class="card-body">
   <h5 class="card-title">Tortas de varios pisos</h5>
@@ -41,7 +41,7 @@
 </div>
 </div>
 <!-- tarjeta 4 -->
-<div class="card" style="width: 18rem;" class="col mx-2">
+<div class="card m-auto" style="width: 18rem;" class="col mx-2">
 <img src="./assets/img/IMG-20221218-WA0014.jpg" class="card-img-top" alt="foto6">
 <div class="card-body">
   <h5 class="card-title">Tortas de varios pisos</h5>
