--- a/PRoductos.html
+++ b/PRoductos.html
@@ -17,7 +17,7 @@
         <img src="./assets/img/IMG-20221209-WA0062.jpg" class="card-img-top" alt="foto1">
         <div class="card-body">
           <h5 class="card-title">Tortas de un piso</h5>
-          <p class="card-text">Las tortas de un piso se elaboran desde 10 hasta 30 personas. Decoración en Buttercream</p>
+          <p class="card-text">Las tortas de un piso se elaboran desde 10 hasta 30 personas. Decoración en Buttercream.</p>
           <a href="./carro_de_compras.html" class="btn btn-primary">Comprar</a>
         </div>
       </div>
