--- a/PRoductos.html
+++ b/PRoductos.html
@@ -8,32 +8,102 @@
     <title>Tortas de un piso</title>
 </head>
 <body>
+  <main>
+    <a href="./index.html" class="btn btn-primary my-3">Pagina Principal</a>
+</main>
   <!-- productos -->
-  <h1 class="Display mb-3">Tortas de un piso</h1>
-  <section id="productos">
+  <h1 class="Display mb-3 my-5 text-center">Tortas de un piso</h1>
+  <p>Las Tortas de un piso se elaboran para 10, 15, 20, 25 y 30 personas</p>
+  <section id="tortas">
   <div class="row gx-5">
     <!-- tarjeta 1 -->
-    <div class="card m-auto" style="width: 18rem;" class="col col-lg-6">
-        <img src="./assets/img/IMG-20221209-WA0062.jpg" class="card-img-top" alt="foto1">
-        <div class="card-body">
-          <h5 class="card-title">Tortas de un piso</h5>
-          <p class="card-text">Las tortas de un piso se elaboran desde 10 hasta 30 personas. Decoración en Buttercream.</p>
-          <a href="./carro_de_compras.html" class="btn btn-primary">Comprar</a>
-        </div>
+     <!-- // Cargar productos de Forma dinamica  -->
+     <div class="card m-auto" style="width: 18rem;" class="col-ms-12 col-lg-4 col-md-6">
+      <img src="./assets/img/IMG-20221209-WA0062.jpg" class="card-img-top" alt="foto1">
+      <div class="card-body">
+        <h5 class="card-title">Tortas para 10 personas</h5>
+        <p class="card-text">Las tortas de 10 personas se elaboran en un tamaño de 15 cm de diametro. Precio 45.000 cl.</p>
+        <a href="./carrito.html" class="btn btn-primary">Comprar</a>
       </div>
-      <!-- tarjeta 2 -->
-      <div class="card m-auto" style="width: 18rem;" class="col col-lg-6">
-        <img src="./assets/img/IMG-20221126-WA0000.jpg" class="card-img-top" alt="foto2">
-        <div class="card-body">
-          <h5 class="card-title">Tortas de un piso</h5>
-          <p class="card-text">Las tortas de un piso se elaboran desde 10 hasta 30 personas. Decoración en fondant</p>
-          <a href="./carro_de_compras.html" class="btn btn-primary">Comprar</a>
-        </div>
+    </div>
+    <!-- tarjeta 2 -->
+    <div class="card m-auto" style="width: 18rem;" class="col-ms-12 col-lg-4 col-md-6">
+      <img src="./assets/img/IMG-20221126-WA0000.jpg" class="card-img-top" alt="foto2">
+      <div class="card-body">
+        <h5 class="card-title">Tortas para 15 personas</h5>
+        <p class="card-text">Las tortas de 15 personas se elaboran en un tamaño de 18 cm de diametro. Precio 55.000 cl.</p>
+     
+        <a href="./carrito.html"   class="btn btn-primary">Comprar</a>
+      </div>
+    </div>
+     <!-- tarjeta 3 -->
+    <div class="card m-auto" style="width: 18rem;" class="col-ms-12 col-lg-4 col-md-6">
+      <img src="./assets/img/AGEQ3526.JPEG" class="card-img-top" alt="foto3">
+      <div class="card-body">
+        <h5 class="card-title">Tortas para 20 personas</h5>
+        <p class="card-text">Las tortas de 20 personas se elaboran en un tamaño de 20 cm de diametro. Precio 65.000 cl.</p>
+        <a href="./carrito.html"  class="btn btn-primary">Comprar</a>
+      </div>
+    </div>
+     <!-- tarjeta 4 -->
+    <div class="card m-auto" style="width: 18rem;" class="col-ms-12 col-lg-4 col-md-6">
+      <img src="./assets/img/HSPB7971.JPEG" class="card-img-top" alt="foto4">
+      <div class="card-body">
+        <h5 class="card-title">Tortas para 25 personas</h5>
+        <p class="card-text">Las tortas de 25 personas se elaboran en un tamaño de 22 cm de diametro. Precio 75.000 cl.</p>
+        <a href="./carrito.html"  class="btn btn-primary">Comprar</a>
       </div>
     </div>
   </div>
+
+<h1 class="Display mb-5 my-5 text-center">Tortas de varios pisos</h1>
+<p>Las tortas de mas de un piso se elaboran a partir de 25 personas</p>
+<!-- productos -->
+
+<section id="productos">
+<div class="row gx-5">
+  <!-- tarjeta 1 -->
+<div class="card m-auto" style="width: 18rem;" class="col-ms-12 col-lg-4 col-md-6">
+  <img src="./assets/img/IMG-20221210-WA0031.jpg" class="card-img-top" alt="foto5">
+  <div class="card-body">
+    <h5 class="card-title">Tortas de dos pisos para 25 personas</h5>
+    <p class="card-text">Las tortas de dos pisos para 25 personas se eleboran en los tamaños de 15 y 18 cm. Precio 80.000 cl.</p>
+    <a href="./carrito.html"  class="btn btn-primary">Comprar</a>
+  </div>
+</div>
+<!-- tarjeta 2 -->
+<div class="card m-auto" style="width: 18rem;" class="col-ms-12 col-lg-4 col-md-6">
+<img src="./assets/img/IMG-20221204-WA0000.jpg" class="card-img-top" alt="foto6">
+<div class="card-body">
+<h5 class="card-title">Tortas de tres pisos para 45 personas</h5>
+<p class="card-text">Las tortas de tres pisos para 45 personas se eleboran en los tamaños de 12, 16 y 20 cm. Precio 140.000 cl.</</p>
+<a href="./carrito.html"   class="btn btn-primary">Comprar</a>
+</div>
+</div>
+<!-- tarjeta 3 -->
+<div class="card m-auto" style="width: 18rem;" class="col-ms-12 col-lg-4 col-md-6">
+<img src="./assets/img/IMG-20221209-WA0148.jpg" class="card-img-top" alt="foto7">
+<div class="card-body">
+<h5 class="card-title">Tortas de cuatro pisos para 80 personas</h5>
+<p class="card-text">Las tortas de cuatro pisos para 70 personas se eleboran en los tamaños de 12, 16, 20 y 24 cm. Precio 240.000 cl.</</p>
+<a href="./carrito.html"   class="btn btn-primary">Comprar</a>
+</div>
+</div>
+<!-- tarjeta 4 -->
+<div class="card m-auto" style="width: 18rem;" class="col-ms-12 col-lg-4 col-md-6">
+<img src="./assets/img/IMG-20221218-WA0014.jpg" class="card-img-top" alt="foto8">
+<div class="card-body">
+<h5 class="card-title">Tortas de cinco pisos para 100 personas</h5>
+<p class="card-text">Las tortas de cinco pisos para 100 personas se eleboran en lvarios tamaños. Precio 300.000 cl.</</p>
+<a href="./carrito.html"  class="btn btn-primary">Comprar</a>
+</div>
+</div>
+</div>
   <p>En Blanco y Valdez nos especializamos por llevar alegria a tus celebraciones, ofrecemos muchos tipos de tortas decoradas en 
     varias coberturas, tenemos para cumpleaños infantiles, adultos, baby shower, bodas, bautizos, comunión, despedidas y mas....</p>
   </section>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  <script src="./assets/js/script.js"></script>
+<script src="./assets/js/productos.js"></script>
 </body>
 </html>
