--- a/productos.html
+++ b/productos.html
@@ -11,10 +11,12 @@
   <main>
     <a href="./index.html" class="btn btn-primary my-3">Pagina Principal</a>
 </main>
+
   <!-- productos -->
+  <section id="productos">
   <h1 class="Display mb-3 my-5 text-center">Tortas de un piso</h1>
   <p>Las Tortas de un piso se elaboran para 10, 15, 20, 25 y 30 personas</p>
-  <section id="tortas">
+  <section id="productos">
   <div class="row gx-5">
     <!-- tarjeta 1 -->
      <!-- // Cargar productos de Forma dinamica  -->
@@ -99,11 +101,14 @@
 </div>
 </div>
 </div>
+</section>
   <p>En Blanco y Valdez nos especializamos por llevar alegria a tus celebraciones, ofrecemos muchos tipos de tortas decoradas en 
     varias coberturas, tenemos para cumpleaños infantiles, adultos, baby shower, bodas, bautizos, comunión, despedidas y mas....</p>
-  </section>
+ 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  <script src="./assets/js/script.js"></script>
+  <script src="./assets/js/index.js"></script>
+  <script src="./assets/js/carrito.js"></script>
 <script src="./assets/js/productos.js"></script>
+
 </body>
 </html>
